# rustaplex

./: Cargo.toml  Readme.md  config.toml
.github/workflows/: rust.yml
resources/: HALLFAME.LST  PLAYER.LST
src/: main.rs
src/game/: animation.rs  button_borders.rs  demo.rs  game_states.rs  gamecontroller.rs  globals.rs  graphics.rs  input.rs  keyboard.rs  level.rs  mod.rs  mouse.rs  sounds.rs  utils.rs  video.rs
