[package]
name = "rustaplex"
version = "0.1.0"
edition = "2021"
readme = "Readme.md"
description = "Supaplex Rust port"
keywords = ["Supaplex", "Rust", "Rustaplex"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["mixer"]