[package]
name = "rustaplex"
version = "0.1.0"
edition = "2021"
readme = "Readme.md"
description = "Supaplex Rust port"
keywords = ["Supaplex", "Rust", "Rustaplex"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2-sys = "0.35.2"
clap = { version = "4.4.6", features = ["derive"] }
derivative = "2.2.0"
log = "0.4.20"
env_logger = "0.10.0"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["mixer"]
